--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ p {
     padding: 0.625rem 1.875rem;
     line-height: 25px;
     background-color: var(--white-color);
+    border: 0.187 rem solid var(--primary-color);
     color: var(--text-color);
     font-size: 0.9375rem;
     font-weight: 600;
@@ -229,7 +230,7 @@ p {
     left: 0;
     width: 100%;
     background: var(--white-color);
-    box-shadow: 0 0.125rem 1.75rem 0 rgb(0, 0, 0, 0.9);
+    box-shadow: 0 0.125rem 1.75rem 0 rgb(0, 0, 0, 0.09);
     transition: all 0.4s ease-out 0s;
 }
 
